--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,12 @@
 	<packaging>jar</packaging>
 
 	<name>epctagcoder</name>
-	<url>http://maven.apache.org</url>
 
+	<scm>
+		<connection>scm:git:https://github.com/extenda/epctagcoder.git</connection>
+		<tag>HEAD</tag>
+	</scm>
+  
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
