--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>se.extenda.maven</groupId>
+		<artifactId>commonpom</artifactId>
+		<version>2.3</version>
+	</parent>
+  
 	<groupId>org.epctagcoder</groupId>
 	<artifactId>epctagcoder</artifactId>
 	<version>0.0.5-SNAPSHOT</version>
