--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,14 @@
   
 	<groupId>org.epctagcoder</groupId>
 	<artifactId>epctagcoder</artifactId>
-	<version>0.0.6-SNAPSHOT</version>
+	<version>0.0.6</version>
 	<packaging>jar</packaging>
 
 	<name>epctagcoder</name>
 
 	<scm>
 		<connection>scm:git:https://github.com/extenda/epctagcoder.git</connection>
-		<tag>v0.0.5</tag>
+		<tag>v0.0.6</tag>
 	</scm>
   
 	<properties>
